# CRAG

./: .gitignore  env.yml  flake.nix  pyproject.toml  run_crag_inference.sh  run_data_preprocess.sh  run_evaluator_training.sh  run_knowledge_preparation.sh  run_selfcrag_preparation.sh
scripts/: combined_knowledge_preparation.py  external_knowledge_preparation.py  internal_knowledge_preparation.py  train_evaluator.py  utils.py
src/template/: __init__.py
